--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
 <center>
   <h1>Welcome to the 1990s</h1>
-  <p>HTML has just been made>
+  <p>HTML has just been made</p>
+  <p>P.S. This is the 404 page (a.k.a. <code>404.html</code>), I was just too lazy to program it.</p>
