--- a/projects/artshare/version-1_2.html
+++ b/projects/artshare/version-1_2.html
@@ -1,1 +1,1 @@
-
+<!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>ArtShare Version 1.2</title> <meta name="description" content="Updates and Fixes of ArtShare!"> <link rel="stylesheet" type="text/css" href="CSS/theme.css"> </head> <body>Accounts added, UI bugs fixedp>
