--- a/projects/artshare/version-1_2.html
+++ b/projects/artshare/version-1_2.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>ArtShare Version 1.2</title> <meta name="description" content="Updates and Fixes of ArtShare!"> <link rel="stylesheet" type="text/css" href="https://wump1337.netlify.app/CSS/theme.css"> </head> <center> <h1>ArtShare 1.2 Updates</h1> <h3>Accounts added, UI bugs fixed</h3>
-t
+<!DOCTYPE html><html> <head> <meta charset="utf-8"> <title>ArtShare Version 1.2</title> <meta name="description" content="Updates and Fixes of ArtShare!"> <link rel="stylesheet" type="text/css" href="https://wump1337.netlify.app/CSS/theme.css"> </head> <center> <h1>ArtShare 1.2 Updates</h1> <h2>Changelog: Accounts added, UI bugs fixed</h2>
+
